--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: blue;
+  background-color: rgb(0, 0, 0);
   text-align: center;
   color: rgb(0, 0, 0);
 }
